@@ -1,6 +1,7 @@
 2014-11-04  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #62442: Wrong cropping of multibyte URLs
+	* Fixed bug #58027: Deprecation warning about GeneralUtility::array_merge_recursive_overrule()
 
 2014-10-07  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
